@@ -39,6 +39,7 @@ Improvements:
 
 Bug fixes:
 
+ - Fix navigation behavior when going from branch to main view. (GH #38)
  - Fix segfault when sorting the tree view by author name.
  - Show branches/refs which names are a substring of the current branch.
  - Stage view: fix off-by-one error when jumping to a file in a diff
